6.4: Reading lookup
